2006-01-19 14:05 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSplitProblemProjectionEdges) to
	split any problematice edges that arise from swapping.
	* src/gridfacer.c (gridfacerSplit) untangle after each split.

2006-01-19  8:32 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerTurnCameraOn,gridfacerCameraActive) turn
	tecplot output on, which dumps when each edge is removed.

2006-01-18 16:38 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerTecplot) working.

2006-01-18 11:15 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerTecplot) started, not operational yet.

2006-01-17 14:22 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCollapse,gridfacerCollapseEdge) started,
	not operational yet.

2006-01-17 13:20 Mike Park  <mike.park@nasa.gov>

	* geomSGIn32 removed the woefully old geoSDK snapshot for Alan.

2006-01-13 11:10 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridBarycentricCoordinate,gridBarycentricCoordinateTri)
	moved to gridmath.c.
	* src/gridmove.c (gridBarycentricCoordinate,
	gridBarycentricCoordinateTri) added from grid.c.
	* src/gridmath.c (gridTriangularBarycentricCoordinate3D) merged with
	gridBarycentricCoordinateTri.

2006-01-13 10:15 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridProjectToTriangle) moved from grid.c to
	allow gridmath methods to be used (this inverts dependency for
	grid->gridmath)

2006-01-13  9:23 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase 4: call all phases, which are now
	in functions.

2006-01-13  8:55 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangle) to fix an uninitalize memeory read,
	set minVolume before use. this repared it so it can be used with
	phased adaption.

2006-01-12 16:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridInterpolateMap2) try node0 and node1 references
	for parent cell, return NULL if fails.
	* src/grid.c (gridFindEnclosingCell) try largest bary direction first.